# Y2_Num_Algo

./: .gitignore  CMakeLists.txt  README.md
TP_1/: CMakeLists.txt  lin_alg.h  main.c  matrices.h  matrices_suite.h  toolbox.h
TP_2/: lagrange.h  main.c  newton.h  test.py  toolbox.h
TP_3/: exp_adjust.h  exponential.h  linear.h  main.c  pow_adjust.h  power.h  regression.h  toolbox.h
