cmake_minimum_required(VERSION 3.17)
project(Y2_Num_Algo C)

set(CMAKE_C_STANDARD 11)

include_directories(TP_1 TP_2)

add_executable(
#        TP_1
#        TP_1/main.c
#        TP_1/toolbox.h
#        TP_1/matrices_suite.h
#        TP_1/lin_alg.h

#        TP_2
#        TP_2/main.c
#        TP_2/toolbox.h
#        TP_2/newton.h
#        TP_2/lagrange.h

        TP_3
        TP_3/main.c
        TP_3/toolbox.h
)
